--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
 <body>
     <div class="slide-container">
         <div class="slide">
-            <img src="./image/P10.jpg.webp" alt="">
+            <img src="./image/download.jpeg" alt="">
             <div class="caption">Caption Text 1</div>
 
         </div>
         <div class="slide">
-            <img src="./image/Indian_Space_Research_Organisation_Logo.svg.png" alt="">
+            <img src="./image/planets-solar-system-size-comparison-600nw-1896313636.webp" alt="">
             <div class="caption">Caption Text 2</div>
 
         </div>
         <div class="slide">
-            <img src="./image/earth-planet-isolated-on-a-world-globe-smoky-background-ai-generated-free-photo.jpg" alt="">
+            <img src="./image/solar-system-chart-showing-illustrations-600nw-2113128407.webp" alt="">
             <div class="caption">Caption Text 3</div>
 
         </div>
         <div class="slide">
-            <img src="./image/istockphoto-1469618147-612x612.jpg" alt="">
+            <img src="./image/Solar_System_Featured.jpg" alt="">
             <div class="caption">Caption Text 4</div>
 
         </div>
