--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
 <body>
     <div class="slide-container">
         <div class="slide">
-            <img src="./image/download.jpeg" alt="">
+            <img src="./image/a-small-house-sits-on-a-small-waterfall-in-the-middle-of-a-forest-ai-generated-free-photo.jpg" alt="">
             <div class="caption">Caption Text 1</div>
 
         </div>
         <div class="slide">
-            <img src="./image/planets-solar-system-size-comparison-600nw-1896313636.webp" alt="">
+            <img src="./image/a-wooden-bridge-leads-to-a-lake-in-the-mountains-ai-generated-photo.jpg" alt="">
             <div class="caption">Caption Text 2</div>
 
         </div>
         <div class="slide">
-            <img src="./image/solar-system-chart-showing-illustrations-600nw-2113128407.webp" alt="">
+            <img src="./image/premium_photo-1667530621211-7924dc31a4a8.jpeg" alt="">
             <div class="caption">Caption Text 3</div>
 
         </div>
         <div class="slide">
-            <img src="./image/Solar_System_Featured.jpg" alt="">
+            <img src="./image/the-mountains-are-reflected-in-the-water-and-purple-flowers-ai-generated-photo.jpg" alt="">
             <div class="caption">Caption Text 4</div>
 
         </div>
